--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.1",
     "mongodb": "^5.1.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.11"
   }
 }
